--- a/apps/core/health/templates/prediction_form.html
+++ b/apps/core/health/templates/prediction_form.html
@@ -31,7 +31,7 @@
                             <p class="card-subtitle">Please provide accurate information for the best prediction</p>
                         </div>
                             
-                            <form method="POST" class="needs-validation" novalidate>
+                            <form method="POST" novalidate>
                                 {% csrf_token %}
                                 
                                 <div class="row">
